Update Amber lab to Java 20